# shadowsocks-rust

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  README.md  appveyor.yml  build.sh  install.sh  run.sh  server_conf.toml
src/: asyncdns.rs  common.rs  config.rs  encrypt.rs  error.rs  eventloop.rs  lib.rs  main.rs  my_daemonize.rs  my_logger.rs  network.rs  relay.rs  shell.rs  socks5.rs  tcp_processor.rs  tcprelay.rs  util.rs
src/collections/: dict.rs  holder.rs  mod.rs  set.rs
src/config/: cmd.rs  mod.rs  proxy_config.rs  running_config.rs  toml.rs
src/crypto/: cipher.rs  crypto_lib.rs  encryptor.rs  error.rs  methods.rs  mod.rs  openssl_lib.rs
src/mode/: mod.rs  rtt_record.rs  server_chooser.rs
src/relay/: asyncdns.rs  mod.rs  tcp_processor.rs  tcp_relay.rs  udp_processor.rs  udp_relay.rs
tests/: base_test.py  common_proxy.rs  config_tests.py  echo_server.py  encrypt.rs  smoke.rs  test.sh  test_tcp.py  test_udp.py
tests/config/: client_conf.toml  local_conf.toml  rs_local.toml  rs_server.toml  server_conf.toml  ss.json  ss_ota.json
