[package]
name = "shadowsocks"
version = "0.1.0"
authors = ["loggerhead <lloggerhead@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/loggerhead/shadowsocks-rust"
homepage = "https://github.com/loggerhead/shadowsocks-rust"
description = """
My implemention of shadowsocks
"""
readme = "README.md"

# TODO: uncomment the following lines when
#       https://github.com/rust-lang/cargo/pull/2325 has implemented.
# [[bin]]
# name = "sslocal"
# path = "src/main.rs"

# [[bin]]
# name = "ssserver"
# path = "src/main.rs"
# required-features = ["is_client"]

[dependencies]
mio = "0.5"
fnv = "1"
log = "0.3"
clap = "2.11"
rand = "0.3"
toml = "0.1"
regex = "0.1"
chrono = "0.2"
try_opt = "0.1"
byteorder = "0.5"
lru_time_cache = "0.5"
lazy_static = "0.2"
rust-crypto = "0.2"
clippy = { version = "0.0.90", optional = true }

[features]
is_client = []