[package]
name = "shadowsocks"
version = "0.4.0"
authors = ["loggerhead <lloggerhead@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/loggerhead/shadowsocks-rust"
homepage = "https://github.com/loggerhead/shadowsocks-rust"
description = """
My implemention of shadowsocks
"""
readme = "README.md"

# TODO: uncomment the following lines when
#       https://github.com/rust-lang/cargo/pull/2325 has implemented.
# [[bin]]
# name = "sslocal"
# path = "src/main.rs"
# required-features = ["sslocal"]

# [[bin]]
# name = "ssserver"
# path = "src/main.rs"

[dependencies]
mio = "0.5"
log = "0.3"
slog = "~1.0"
slog-term = "~1.1"
slog-stream = "~1.1"
slog-stdlog = "~1.0"
fnv = "~1.0"
clap = "~2.11"
rand = "0.3"
toml = "0.1"
regex = "0.1"
chrono = "0.2"
try_opt = "0.1"
byteorder = "0.5"
lazy_static = "0.2"
lru_time_cache = "0.5"
rust-crypto = "0.2"
openssl = { version = "0.9", optional = true }
clippy = { version = ">= 0.0.95", optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
sig = "~1.0.0"
daemonize = "0.2"

[features]
sslocal = []
default = ["openssl"]
